2012.04.10 Kentaro FUKUCHI <kentaro@fukuchi.org>
	[master]
	* Following fixes have been contributed by Yutaka Niibe.
	* qrencode.1.in:
	  - "Hyphen-used-as-minus-sign" error has been fixed.

2012.04.01 Kentaro FUKUCHI <kentaro@fukuchi.org>
	[3.3]
	* qrenc.c:
	  - ASCII mode has been added. (Thanks to Ralf Ertzinger)
	  - Small code cleanups.
	  - ASCII mode now handles ".txt" suffix correctly.
	* NEWS, README:
	  - Documentation updates.
	* Version 3.3.0 has been released.
	[master]
	* Merged to 3.3.0.

2012.03.31 Kentaro FUKUCHI <kentaro@fukuchi.org>
	[3.2]
	* README, NEWS, configure.ac:
	  - Bumped version to 3.2.1.
	* Version 3.2.1 has been released.
	[3.3]
	* qrenc.c:
	  - Copyright year has been updated.

2012.03.30 Kentaro FUKUCHI <kentaro@fukuchi.org>
	* libqrencode.pc.in :
	  - Replaced obsolete macro LIBPTHREAD with LIBS. (thx to gniibe)
	* configure.ac:
	  - Checks $ac_cv_lib_pthread_pthread_mutex_init instead of
	    HAVE_LIBPTHREAD. (thx to gniibe)

2012.02.28 Kentaro FUKUCHI <kentaro@fukuchi.org>
	[master, 3.2.1]
	* .gitignore:
	  - Added "tests/pthread_qrencode".
	[3.3]
	* 3.3 branch has been started.
	  - 3.2.1 has been canceled.
	* configure.ac, README, NEWS:
	  - Version number changes.

2012.01.31 Kentaro FUKUCHI <kentaro@fukuchi.org>
	[master]
	* Recent 3.2 branch has been merged into the master.
	* qrenc.c:
	  - Quick bug fix introduced in 09b72eb3070a36461eb83c1ec5237e4855ee515b.

2012.01.19 Kentaro FUKUCHI <kentaro@fukuchi.org>
	[3.2.1]
	* cofigure.ac, qrencode.[hc], qrenc.c, tests/test_qrencode.c:
	  - QRcode_APIVersion() and QRcode_APIVersionString() have been added.
	  - New macro values {MAJOR,MINOR,MICRO}_VERSION have been introduced.
	  - New tests have been added.
	* qrenc.c:
	  - Removed a useless storage class specifier from enum imageType.
	[master, 3.2.1]
	* Pulled moshen:write_ansi.
	[3.2.1]
	* tests/decoder.c:
	  - Bug fix.
	* qrenc.c:
	  - Code refactoring.
	  - Now you can omit "-o -" for EPS and ANSI output.