@@ -6,5 +6,6 @@ includedir=@includedir@
 Name: libqrencode
 Description: A QR Code encoding library
 Version: @VERSION@
-Libs: -L${libdir} -lqrencode @LIBS@
+Libs: -L${libdir} -lqrencode
+Libs.private: @LIBPTHREAD@
 Cflags: -I${includedir}
