@@ -3,6 +3,8 @@
 	* Following fixes have been contributed by Yutaka Niibe.
 	* qrencode.1.in:
 	  - "Hyphen-used-as-minus-sign" error has been fixed.
+	* configure.ac, libqrencode.pc.in, tests/Makefile.am:
+	  - Explicit link to libpthread has been eliminated.
 
 2012.04.01 Kentaro FUKUCHI <kentaro@fukuchi.org>
 	[3.3]
